--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://averageuser4.github.io/paint",
+  "homepage": "https://averageuser4.github.io/ms-paint-remake",
   "name": "paint-xp",
   "version": "0.1.0",
   "private": true,
